1.15.21
-------

1.15.20
-------
(RB=288213)
Provide methods to map keys to multiple hosts in KeyMapper

1.15.19
-------
(RB=302891)
Fix java 7 warnings.

(RB=299112)
Allow for clients to recieve strongly-typed keys returned from creates.
old builder format:
CreateResponse<K> entity = (CreateResponse<K>)response.getEntity();
K key = entity.getId();
new builder format:
CreateIdResponse<K> entity = response.getEntity();
K key = entity.getId();

Additionally, added back in public wrapResponse function RestResponseDecoder that was removed in 1.15.14,
but it is marked as deprecated.

1.15.18
-------
(RB=300929)
Add trace level logging of response to DynamicClient

(RB=301656)
Make ScatterGatherResult.getRequestInfo() and .getUnmappedKeys() public. KVScatterGatherResult also.

(RB=301492)
Clean up caprep so it can be better leveraged for language independent test suite.

1.15.17
-------
(RB=299453)
Fixed bug where any request with the word restli in it is treated as a documentation request

(RB=299380)
Expose hash ring information through jmx

1.15.16
-------

(RB=298904)
Update D2ClientBuilder to honor d2ServicePath

(RB=295065)
PegasusPlugin: Generate list of input pdsc files for generateDataTemplate task at execution time.

(RB=297096)
Extract client cert from https request and save it in the RequestContext.

(RB=296391)
Support AsyncCallableTasks and documentation requests in the mock http server. Clean up mock http server threadpools. Fix hashCode in ProtocolVersion.

1.15.15
-------
(RB=297875)
Resurrecting InvokeAwares.

(RB=276851)
Checking in support for RestLi filters.
Checking in RestLi filters integration test.

1.15.14
-------
(RB=247966)
Changes to allow 2.0 URI format.
2.0 URI format will be publicly documented shortly.
Related refactoring of key encoding.
Added many tests to cover both 1.0 and 2.0 URI format.

(RB=295979)
add setter for d2ServicePath in D2ClientConfig

1.15.13
-------
(RB=292644)